--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+	<meta name="author"      content="Indé-SI">
 	
-	<title>Coming Soon html5 template by GetTemplate</title>
+	<title>UnDeTrie</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
 	<!-- Bootstrap itself -->
-	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<!-- Icons -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> 
+	<link href="assets/css/font-awesome.css" rel="stylesheet"> 
 	<!-- Fonts -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700"> 
+	<link rel="stylesheet" href="assets/css/font.txt"> 
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="assets/css/styles.css">
 
@@ -103,18 +103,6 @@
 				<div class="col-md-12 col-md-push-1">
 					<h2>Nous avons eu votre interêt ?</h2>
 					<p>N'hésitez pas à parler de UnDeTrie à vos amis !</p>
-					<!-- AddThis Button BEGIN -->
-					<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-					<a class="addthis_button_facebook"></a>
-					<a class="addthis_button_twitter"></a>
-					<a class="addthis_button_linkedin"></a>
-					<a class="addthis_button_google_plusone_share"></a>
-					<a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
-					</div>
-					<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-					<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-536ba34f3dab1f93"></script>
-					<!-- AddThis Button END -->
-					
 				</div>
 		</div>	
 	</section>
@@ -124,7 +112,7 @@
 <br>
 
 <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/template.js"></script>
 </body>
 </html>
